@@ -2,6 +2,8 @@ udpkg (0.019) UNRELEASED; urgency=low
 
   * Thiemo Seufer
     - Add CFLAGS for warnings and space optimization.
+  * Joey Hess
+    - Use architecture "powerpc" for ppc64, patch from Anton Blanchard.
 
  -- Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>  Wed, 10 Dec 2003 17:42:08 +0100
 
